--- a/spec/phonegap/update_index_spec/index.md.html
+++ b/spec/phonegap/update_index_spec/index.md.html
@@ -25,6 +25,7 @@
 			<ul>
 				<li><a href="phonegap_accelerometer_accelerometer.md.html">Accelerometer</a></li>
 				<li><a href="phonegap_camera_camera.md.html">Camera</a></li>
+				<li><a href="phonegap_media_capture.md.html">Capture</a></li>
 				<li><a href="phonegap_device_device.md.html">Device</a></li>
 				<li><a href="phonegap_events_events.md.html">Events</a></li>
 				<li><a href="phonegap_file_file.md.html">File</a></li>
@@ -51,6 +52,10 @@
         <li>
             <h2><a href="phonegap_camera_camera.md.html#Camera">Camera</a></h2>
             <span>Capture photo using the device's camera.</span>
+        </li>
+        <li>
+            <h2><a href="phonegap_media_capture.md.html#Capture">Capture</a></h2>
+            <span>Capture media using device applications.</span>
         </li>
         <li>
             <h2><a href="phonegap_device_device.md.html#Device">Device</a></h2>
@@ -82,7 +87,7 @@
         </li>
         <li>
             <h2><a href="phonegap_storage_storage.md.html#Storage">Storage</a></h2>
-            <span>Hook into the native devies storage options.</span>
+            <span>Hook into the native devices storage options.</span>
         </li>
     </ul>
 </div>
