--- a/spec/phonegap/update_keyword_index_spec/_index.html
+++ b/spec/phonegap/update_keyword_index_spec/_index.html
@@ -41,6 +41,7 @@
 			<ul>
 <li><a href="phonegap_accelerometer_accelerometer.md.html">Accelerometer</a></li>
 				<li><a href="phonegap_camera_camera.md.html">Camera</a></li>
+				<li><a href="phonegap_media_capture.md.html">Capture</a></li>
 				<li><a href="phonegap_device_device.md.html">Device</a></li>
 				<li><a href="phonegap_events_events.md.html">Events</a></li>
 				<li><a href="phonegap_geolocation_geolocation.md.html">Geolocation</a></li>
